# gen/vlr/api/api_service.pb.go
@@ -246,6 +246,101 @@ func (x *GetMatchResponse) GetMatch() *Match {
 	return nil
 }
 
+// Returns a team by its id
+type GetTeamRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	TeamId string `protobuf:"bytes,1,opt,name=team_id,json=teamId,proto3" json:"team_id,omitempty"`
+}
+
+func (x *GetTeamRequest) Reset() {
+	*x = GetTeamRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_vlr_api_api_service_proto_msgTypes[4]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetTeamRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetTeamRequest) ProtoMessage() {}
+
+func (x *GetTeamRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_vlr_api_api_service_proto_msgTypes[4]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetTeamRequest.ProtoReflect.Descriptor instead.
+func (*GetTeamRequest) Descriptor() ([]byte, []int) {
+	return file_vlr_api_api_service_proto_rawDescGZIP(), []int{4}
+}
+
+func (x *GetTeamRequest) GetTeamId() string {
+	if x != nil {
+		return x.TeamId
+	}
+	return ""
+}
+
+type GetTeamResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Team *Team `protobuf:"bytes,1,opt,name=team,proto3" json:"team,omitempty"`
+}
+
+func (x *GetTeamResponse) Reset() {
+	*x = GetTeamResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_vlr_api_api_service_proto_msgTypes[5]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetTeamResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetTeamResponse) ProtoMessage() {}
+
+func (x *GetTeamResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_vlr_api_api_service_proto_msgTypes[5]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetTeamResponse.ProtoReflect.Descriptor instead.
+func (*GetTeamResponse) Descriptor() ([]byte, []int) {
+	return file_vlr_api_api_service_proto_rawDescGZIP(), []int{5}
+}
+
+func (x *GetTeamResponse) GetTeam() *Team {
+	if x != nil {
+		return x.Team
+	}
+	return nil
+}
+
 type GetMatchIdsRequest_Options struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
@@ -257,7 +352,7 @@ type GetMatchIdsRequest_Options struct {
 func (x *GetMatchIdsRequest_Options) Reset() {
 	*x = GetMatchIdsRequest_Options{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_vlr_api_api_service_proto_msgTypes[4]
+		mi := &file_vlr_api_api_service_proto_msgTypes[6]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -270,7 +365,7 @@ func (x *GetMatchIdsRequest_Options) String() string {
 func (*GetMatchIdsRequest_Options) ProtoMessage() {}
 
 func (x *GetMatchIdsRequest_Options) ProtoReflect() protoreflect.Message {
-	mi := &file_vlr_api_api_service_proto_msgTypes[4]
+	mi := &file_vlr_api_api_service_proto_msgTypes[6]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -329,22 +424,33 @@ var file_vlr_api_api_service_proto_rawDesc = []byte{
 	0x65, 0x74, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12,
 	0x24, 0x0a, 0x05, 0x6d, 0x61, 0x74, 0x63, 0x68, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x0e,
 	0x2e, 0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x52, 0x05,
-	0x6d, 0x61, 0x74, 0x63, 0x68, 0x32, 0xbf, 0x01, 0x0a, 0x03, 0x41, 0x70, 0x69, 0x12, 0x61, 0x0a,
-	0x0b, 0x47, 0x65, 0x74, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x49, 0x64, 0x73, 0x12, 0x1b, 0x2e, 0x76,
-	0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x47, 0x65, 0x74, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x49,
-	0x64, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1c, 0x2e, 0x76, 0x6c, 0x72, 0x2e,
-	0x61, 0x70, 0x69, 0x2e, 0x47, 0x65, 0x74, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x49, 0x64, 0x73, 0x52,
-	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x17, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x11, 0x3a,
-	0x01, 0x2a, 0x22, 0x0c, 0x2f, 0x76, 0x31, 0x2f, 0x6d, 0x61, 0x74, 0x63, 0x68, 0x49, 0x64, 0x73,
-	0x12, 0x55, 0x0a, 0x08, 0x47, 0x65, 0x74, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x12, 0x18, 0x2e, 0x76,
-	0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x47, 0x65, 0x74, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x52,
-	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x19, 0x2e, 0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69,
-	0x2e, 0x47, 0x65, 0x74, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
-	0x65, 0x22, 0x14, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0e, 0x3a, 0x01, 0x2a, 0x22, 0x09, 0x2f, 0x76,
-	0x31, 0x2f, 0x6d, 0x61, 0x74, 0x63, 0x68, 0x42, 0x23, 0x5a, 0x21, 0x67, 0x69, 0x74, 0x68, 0x75,
-	0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x64, 0x65, 0x72, 0x61, 0x72, 0x6b, 0x65, 0x6e, 0x2f, 0x76,
-	0x6c, 0x72, 0x2d, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x06, 0x70, 0x72,
-	0x6f, 0x74, 0x6f, 0x33,
+	0x6d, 0x61, 0x74, 0x63, 0x68, 0x22, 0x29, 0x0a, 0x0e, 0x47, 0x65, 0x74, 0x54, 0x65, 0x61, 0x6d,
+	0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x17, 0x0a, 0x07, 0x74, 0x65, 0x61, 0x6d, 0x5f,
+	0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x74, 0x65, 0x61, 0x6d, 0x49, 0x64,
+	0x22, 0x34, 0x0a, 0x0f, 0x47, 0x65, 0x74, 0x54, 0x65, 0x61, 0x6d, 0x52, 0x65, 0x73, 0x70, 0x6f,
+	0x6e, 0x73, 0x65, 0x12, 0x21, 0x0a, 0x04, 0x74, 0x65, 0x61, 0x6d, 0x18, 0x01, 0x20, 0x01, 0x28,
+	0x0b, 0x32, 0x0d, 0x2e, 0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x54, 0x65, 0x61, 0x6d,
+	0x52, 0x04, 0x74, 0x65, 0x61, 0x6d, 0x32, 0x92, 0x02, 0x0a, 0x03, 0x41, 0x70, 0x69, 0x12, 0x61,
+	0x0a, 0x0b, 0x47, 0x65, 0x74, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x49, 0x64, 0x73, 0x12, 0x1b, 0x2e,
+	0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x47, 0x65, 0x74, 0x4d, 0x61, 0x74, 0x63, 0x68,
+	0x49, 0x64, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1c, 0x2e, 0x76, 0x6c, 0x72,
+	0x2e, 0x61, 0x70, 0x69, 0x2e, 0x47, 0x65, 0x74, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x49, 0x64, 0x73,
+	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x17, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x11,
+	0x3a, 0x01, 0x2a, 0x22, 0x0c, 0x2f, 0x76, 0x31, 0x2f, 0x6d, 0x61, 0x74, 0x63, 0x68, 0x49, 0x64,
+	0x73, 0x12, 0x55, 0x0a, 0x08, 0x47, 0x65, 0x74, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x12, 0x18, 0x2e,
+	0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x47, 0x65, 0x74, 0x4d, 0x61, 0x74, 0x63, 0x68,
+	0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x19, 0x2e, 0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70,
+	0x69, 0x2e, 0x47, 0x65, 0x74, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
+	0x73, 0x65, 0x22, 0x14, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0e, 0x3a, 0x01, 0x2a, 0x22, 0x09, 0x2f,
+	0x76, 0x31, 0x2f, 0x6d, 0x61, 0x74, 0x63, 0x68, 0x12, 0x51, 0x0a, 0x07, 0x47, 0x65, 0x74, 0x54,
+	0x65, 0x61, 0x6d, 0x12, 0x17, 0x2e, 0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x47, 0x65,
+	0x74, 0x54, 0x65, 0x61, 0x6d, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x18, 0x2e, 0x76,
+	0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x47, 0x65, 0x74, 0x54, 0x65, 0x61, 0x6d, 0x52, 0x65,
+	0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x13, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0d, 0x3a, 0x01,
+	0x2a, 0x22, 0x08, 0x2f, 0x76, 0x31, 0x2f, 0x74, 0x65, 0x61, 0x6d, 0x42, 0x23, 0x5a, 0x21, 0x67,
+	0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x64, 0x65, 0x72, 0x61, 0x72, 0x6b,
+	0x65, 0x6e, 0x2f, 0x76, 0x6c, 0x72, 0x2d, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f,
+	0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -359,32 +465,38 @@ func file_vlr_api_api_service_proto_rawDescGZIP() []byte {
 	return file_vlr_api_api_service_proto_rawDescData
 }
 
-var file_vlr_api_api_service_proto_msgTypes = make([]protoimpl.MessageInfo, 5)
+var file_vlr_api_api_service_proto_msgTypes = make([]protoimpl.MessageInfo, 7)
 var file_vlr_api_api_service_proto_goTypes = []any{
 	(*GetMatchIdsRequest)(nil),         // 0: vlr.api.GetMatchIdsRequest
 	(*GetMatchIdsResponse)(nil),        // 1: vlr.api.GetMatchIdsResponse
 	(*GetMatchRequest)(nil),            // 2: vlr.api.GetMatchRequest
 	(*GetMatchResponse)(nil),           // 3: vlr.api.GetMatchResponse
-	(*GetMatchIdsRequest_Options)(nil), // 4: vlr.api.GetMatchIdsRequest.Options
-	(MatchState)(0),                    // 5: vlr.api.MatchState
-	(*timestamppb.Timestamp)(nil),      // 6: google.protobuf.Timestamp
-	(*Match)(nil),                      // 7: vlr.api.Match
+	(*GetTeamRequest)(nil),             // 4: vlr.api.GetTeamRequest
+	(*GetTeamResponse)(nil),            // 5: vlr.api.GetTeamResponse
+	(*GetMatchIdsRequest_Options)(nil), // 6: vlr.api.GetMatchIdsRequest.Options
+	(MatchState)(0),                    // 7: vlr.api.MatchState
+	(*timestamppb.Timestamp)(nil),      // 8: google.protobuf.Timestamp
+	(*Match)(nil),                      // 9: vlr.api.Match
+	(*Team)(nil),                       // 10: vlr.api.Team
 }
 var file_vlr_api_api_service_proto_depIdxs = []int32{
-	5, // 0: vlr.api.GetMatchIdsRequest.state:type_name -> vlr.api.MatchState
-	6, // 1: vlr.api.GetMatchIdsRequest.from:type_name -> google.protobuf.Timestamp
-	6, // 2: vlr.api.GetMatchIdsRequest.to:type_name -> google.protobuf.Timestamp
-	4, // 3: vlr.api.GetMatchIdsRequest.options:type_name -> vlr.api.GetMatchIdsRequest.Options
-	7, // 4: vlr.api.GetMatchResponse.match:type_name -> vlr.api.Match
-	0, // 5: vlr.api.Api.GetMatchIds:input_type -> vlr.api.GetMatchIdsRequest
-	2, // 6: vlr.api.Api.GetMatch:input_type -> vlr.api.GetMatchRequest
-	1, // 7: vlr.api.Api.GetMatchIds:output_type -> vlr.api.GetMatchIdsResponse
-	3, // 8: vlr.api.Api.GetMatch:output_type -> vlr.api.GetMatchResponse
-	7, // [7:9] is the sub-list for method output_type
-	5, // [5:7] is the sub-list for method input_type
-	5, // [5:5] is the sub-list for extension type_name
-	5, // [5:5] is the sub-list for extension extendee
-	0, // [0:5] is the sub-list for field type_name
+	7,  // 0: vlr.api.GetMatchIdsRequest.state:type_name -> vlr.api.MatchState
+	8,  // 1: vlr.api.GetMatchIdsRequest.from:type_name -> google.protobuf.Timestamp
+	8,  // 2: vlr.api.GetMatchIdsRequest.to:type_name -> google.protobuf.Timestamp
+	6,  // 3: vlr.api.GetMatchIdsRequest.options:type_name -> vlr.api.GetMatchIdsRequest.Options
+	9,  // 4: vlr.api.GetMatchResponse.match:type_name -> vlr.api.Match
+	10, // 5: vlr.api.GetTeamResponse.team:type_name -> vlr.api.Team
+	0,  // 6: vlr.api.Api.GetMatchIds:input_type -> vlr.api.GetMatchIdsRequest
+	2,  // 7: vlr.api.Api.GetMatch:input_type -> vlr.api.GetMatchRequest
+	4,  // 8: vlr.api.Api.GetTeam:input_type -> vlr.api.GetTeamRequest
+	1,  // 9: vlr.api.Api.GetMatchIds:output_type -> vlr.api.GetMatchIdsResponse
+	3,  // 10: vlr.api.Api.GetMatch:output_type -> vlr.api.GetMatchResponse
+	5,  // 11: vlr.api.Api.GetTeam:output_type -> vlr.api.GetTeamResponse
+	9,  // [9:12] is the sub-list for method output_type
+	6,  // [6:9] is the sub-list for method input_type
+	6,  // [6:6] is the sub-list for extension type_name
+	6,  // [6:6] is the sub-list for extension extendee
+	0,  // [0:6] is the sub-list for field type_name
 }
 
 func init() { file_vlr_api_api_service_proto_init() }
@@ -443,6 +555,30 @@ func file_vlr_api_api_service_proto_init() {
 			}
 		}
 		file_vlr_api_api_service_proto_msgTypes[4].Exporter = func(v any, i int) any {
+			switch v := v.(*GetTeamRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_vlr_api_api_service_proto_msgTypes[5].Exporter = func(v any, i int) any {
+			switch v := v.(*GetTeamResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_vlr_api_api_service_proto_msgTypes[6].Exporter = func(v any, i int) any {
 			switch v := v.(*GetMatchIdsRequest_Options); i {
 			case 0:
 				return &v.state
@@ -461,7 +597,7 @@ func file_vlr_api_api_service_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_vlr_api_api_service_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   5,
+			NumMessages:   7,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
