# src/service/handlers.go
@@ -22,3 +22,11 @@ func (s *Server) GetMatch(ctx context.Context, in *proto.GetMatchRequest) (*prot
 	}
 	return &proto.GetMatchResponse{Match: match}, nil
 }
+
+func (s *Server) GetTeam(ctx context.Context, in *proto.GetTeamRequest) (*proto.GetTeamResponse, error) {
+	team, err := api.GetTeam(in.TeamId)
+	if err != nil {
+		return nil, err
+	}
+	return &proto.GetTeamResponse{Team: team}, nil
+}
